using System;

public enum UIType
{
	Overlay,
	Replace
}

