using System;

public interface UIViewInterface {

	void InitView();
	void ShowView();
	void HideView();
	void CloseView();
}

